# skill-demo-app

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  del.ipynb  docker-compose-cloudflare.yml  docker-compose.yml  docker-compsoe-3xui.yml  manager.py  pyproject.toml
src/bot/: __init__.py  application.py  bootstrap.py  main.py  middlewares.py  register_handlers.py  storage.py
src/bot/admin/: filters.py
src/bot/admin/coupon/: dao.py  handlers.py  keyboards.py  service.py  utils.py
src/bot/admin/feedback/: dao.py  fsm.py  handlers.py  keyboards.py  service.py
src/bot/admin/lead/: dao.py  fsm.py  handlers.py  keyboards.py  service.py
src/bot/admin/start/: handlers.py  keyboards.py  service.py
src/bot/coupon/: dao.py  fsm.py  handlers.py  service.py
src/bot/feedback/: dao.py  handlers.py  keyboards.py  service.py
src/bot/lk/: dao.py  dto.py  handlers.py  service.py  utils.py
src/bot/start/: dao.py  handlers.py  keyboards.py  service.py
src/bot/stop_fsm/: handlers.py  keyboards.py  service.py
src/bot/subscription/: dao.py  keyboards.py  service.py
src/bot/support/: keyboards.py
src/bot/tariff/: dao.py  handlers.py  keyboards.py  service.py
src/core/: api.py  config.py  consts.py  exceptions.py  redis.py  utils.py
src/core/database/: __init__.py  core.py  dao.py
src/core/database/mixins/: __init__.py  pk.py  timestamp.py
src/core/payment/: api.py  dao.py  service.py
src/core/server/: __init__.py  core.py  dao.py  dto.py  service.py
src/core/tariff/: dao.py  service.py
src/webhook/: application.py  bootstrap.py  main.py
src/webhook/health_checks/: __init__.py  router.py
src/webhook/yookassa/: __init__.py  dao.py  dto.py  router.py  service.py
src/worker/: README.md  __init__.py  application.py  bootstrap.py  main.py
src/worker/subscription_expiry/: dao.py  keyboards.py  service.py  worker.py
(+33 files in other folders)
