[project]
name = "bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Egor Kondratev",email = "zhora_kondratev@bk.ru"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "typer (>=0.24.0,<0.25.0)",
    "aiogram (>=3.25.0,<4.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "punq (>=0.7.0,<0.8.0)",
    "black (>=26.1.0,<27.0.0)",
    "ruff (>=0.15.2,<0.16.0)",
    "isort (>=8.0.0,<9.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "taskiq (>=0.12.1,<0.13.0)",
    "taskiq-redis (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ['py312']  # Целевая версия Python


[tool.isort]
py_version = 312
profile = "black"  # Совместимость с Black (использует правила форматирования Black)
line_length = 120  # Длина строки (должна совпадать с Black)
multi_line_output = 3  # Определяет стиль вывода (3 — вертикальный вывод, предпочтительный для Black)
include_trailing_comma = true  # Включить запятую в конце списка
force_grid_wrap = 0  # Разбиение по сетке (0 для выключения)
use_parentheses = true  # Использование скобок для длинных импортов
ensure_newline_before_comments = true  # Перенос строки перед комментариями
virtual_env = "./.venv"


[tool.ruff]
line-length = 120
lint.select = [
  "F", "E", "W", "C90", "UP",
  "N", "YTT", "S", "BLE", "FBT",
  "B", "A", "C4", "T20", "Q",
  "RET", "SIM", "ARG", "ERA",
  "PGH"
]
target-version = "py312"
exclude = [
    ".git",
    "__pycache__",
    "app/core/database/revisions",
    ".venv",
]
lint.ignore = ["S104", "B008", "S101"]

